--- a/index.html
+++ b/index.html
@@ -1,58 +1,279 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Meu Blog Simples</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Meu Blog Avançado</title>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 40px;
-      background-color: #f9f9f9;
+
+    :root {
+      --primary-color: #4a90e2;
+      --background: #f4f6f8;
+      --text-color: #333;
+      --card-bg: #fff;
+      --shadow: rgba(0, 0, 0, 0.1);
+      --overlay-color: rgba(0, 0, 0, 0.5);
     }
+
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-color: var(--background);
+      color: var(--text-color);
+      line-height: 1.6;
+      padding: 20px;
+      overflow-x: hidden;
+      position: relative;
+    }
+
     header {
       text-align: center;
       margin-bottom: 40px;
     }
-    article {
-      background: white;
+
+    header h1 {
+      font-size: 2.5rem;
+      color: var(--primary-color);
+    }
+
+    header p {
+      font-size: 1.2rem;
+      color: #555;
+    }
+
+    main {
+      max-width: 800px;
+      margin: 0 auto;
+      display: flex;
+      flex-direction: column;
+      gap: 20px;
+    }
+     /* Barra Lateral Oculta com Efeito */
+     aside {
+      position: fixed;
+      top: 0;
+      left: -300px;
+      width: 300px;
+      height: 100%;
+      background-color: var(--card-bg);
+      box-shadow: 4px 0 8px var(--shadow);
       padding: 20px;
+      transition: left 0.3s ease-in-out, opacity 0.3s ease;
+      z-index: 100;
+      border-right: 2px solid #ddd;
+      display: flex;
+      flex-direction: column;
+      gap: 20px;
+    }
+
+    aside.active {
+      left: 0;
+      opacity: 1;
+    }
+
+    .overlay {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: var(--overlay-color);
+      z-index: 50;
+      opacity: 0;
+      visibility: hidden;
+      transition: opacity 0.3s ease;
+    }
+
+    .overlay.active {
+      opacity: 1;
+      visibility: visible;
+    }
+
+    ul {
+      list-style: none;
+      padding-left: 0;
+    }
+
+    li {
       margin-bottom: 20px;
-      border-radius: 10px;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
     }
-    h1, h2 {
-      color: #333;
+
+    a {
+      text-decoration: none;
+      color: var(--primary-color);
+      display: block;
+      font-size: 1rem;
+      font-weight: 600;
+      padding: 10px;
+      border-radius: 6px;
+      transition: background-color 0.3s, color 0.3s;
     }
+
+    a:hover {
+      background-color: var(--primary-color);
+      color: #fff;
+    }
+
+    /* Hamburger Menu */
+    .hamburger {
+      display: flex;
+      flex-direction: column;
+      gap: 6px;
+      cursor: pointer;
+      position: fixed;
+      top: 20px;
+      left: 20px;
+      z-index: 200;
+    }
+
+    .hamburger div {
+      width: 30px;
+      height: 4px;
+      background-color: var(--primary-color);
+      border-radius: 5px;
+    }
+
+    /* Animação do efeito de desfoque */
+    .blurred {
+      filter: blur(5px);
+      pointer-events: none;
+    }
+
+    /* Responsividade */
+    @media (max-width: 768px) {
+      main {
+        margin-left: 0;
+      }
+    }
+
+    article {
+      background-color: var(--card-bg);
+      padding: 24px;
+      border-radius: 12px;
+      box-shadow: 0 4px 8px var(--shadow);
+      transition: transform 0.2s, box-shadow 0.2s;
+    }
+
+    article:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 6px 12px var(--shadow);
+    }
+
+    article h2 {
+      margin-bottom: 10px;
+      color: var(--primary-color);
+    }
+
+    article p {
+      margin-bottom: 10px;
+    }
+
     footer {
       text-align: center;
-      margin-top: 40px;
-      color: #888;
+      margin-top: 60px;
+      font-size: 0.9rem;
+      color: #999;
+    }
+
+    @media (max-width: 600px) {
+      body {
+        padding: 10px;
+      }
+    @media (max-width: 600px) {
+      body {
+        padding: 10px;
+      }
+
+      header h1 {
+        font-size: 2rem;
+      }
+
+      article {
+        padding: 16px;
+      }
     }
   </style>
 </head>
 <body>
 
   <header>
-    <h1>Meu Blog Simples</h1>
-    <p>Bem-vindo ao meu cantinho na web!</p>
+    <h1>Meu Blog Avançado</h1>
+    <p>Compartilhando ideias, estudos e pensamentos</p>
   </header>
 
-  <article>
-    <h2>🌞 Primeiro Post: Começando meu blog</h2>
-    <p><strong>Publicado em:</strong> 07 de maio de 2025</p>
-    <p>Olá! Este é o meu primeiro post. Estou animado para compartilhar ideias, aprendizados e pensamentos por aqui.</p>
-  </article>
+  <main>
+    <article>
+      <h2>🌞 Primeiro Post: Começando meu blog</h2>
+      <p><strong>Publicado em:</strong> 07 de maio de 2025</p>
+      <p>Olá! Este é o meu primeiro post. Estou animado para compartilhar ideias, aprendizados e pensamentos por aqui.</p>
+    </article>
+<!-- Barra Lateral -->
+<aside id="sidebar">
+    <div class="hamburger" onclick="toggleSidebar()">
+      <div></div>
+      <div></div>
+      <div></div>
+    </div>
+    <h3 style="color: var(--primary-color); margin-bottom: 15px;"></h3>
+    <ul>
+      <li><a href="file:///C:/Users/ordep/OneDrive/Área%20de%20Trabalho/Nova%20pasta/compras.html">📄 Produtos</a></li>
+      <li><a href="#">📚 Outros eBooks</a></li>
+      <li><a href="https://wa.me/message/25HR4RHXONVOP1">💬 Contato</a></li>
+      <li><a href="https://www.linkedin.com/in/pedro-henrique-185802338/">📰 Linkedin</a></li>
+    </ul>
+  </aside>
+   <!-- Overlay de Desfoque -->
+   <div class="overlay" id="overlay" onclick="toggleSidebar()"></div>
 
-  <article>
-    <h2>📚 O que estou estudando esta semana</h2>
-    <p><strong>Publicado em:</strong> 06 de maio de 2025</p>
-    <p>Essa semana estou aprendendo HTML e CSS. Está sendo muito divertido entender como funciona a criação de páginas web!</p>
-  </article>
+   <script>
+     function toggleSidebar() {
+       const sidebar = document.getElementById('sidebar');
+       const overlay = document.getElementById('overlay');
+       const mainContent = document.getElementById('main-content');
 
+       sidebar.classList.toggle('active');
+       overlay.classList.toggle('active');
+       mainContent.classList.toggle('blurred');
+     }
+   </script>
+    <article>
+        <h2>📘 Esse é meu primeiro eBook</h2>
+        <p><strong>Publicado em:</strong> 06 de maio de 2025</p>
+        <p>Na criação desse eBook aprendi várias coisas. No meu ponto de vista, ele está pronto para ser divulgado.</p>
+
+        <form action="#" method="post" style="margin-top: 15px;">
+          <label for="email">Seu e-mail:</label><br>
+          <input type="email" id="email" name="email" required style="width: 100%; padding: 8px; margin-top: 5px; margin-bottom: 10px; border-radius: 6px; border: 1px solid #ccc;"><br>
+
+          <label for="telefone">Seu telefone:</label><br>
+          <input type="tel" id="telefone" name="telefone" pattern="[0-9]{10,11}" required placeholder="Somente números" style="width: 100%; padding: 8px; margin-top: 5px; margin-bottom: 15px; border-radius: 6px; border: 1px solid #ccc;"><br>
+          <button type="submit" style="background-color: var(--primary-color); color: white; padding: 10px 20px; border: none; border-radius: 6px; cursor: pointer; font-size: 1rem;">
+            📥 Adquira já
+          </button>
+        </form>
+      </article>
+      <p style="
+  font-style: italic;
+  color: #444;
+  margin-bottom: 20px;
+  padding: 12px 16px;
+  background-color: #f0f4fa;
+  border-left: 4px solid var(--primary-color);
+  border-radius: 8px;
+  font-size: 1rem;
+  line-height: 1.6;
+">
+  “Você não é exagerada. Você é profunda. E isso — mesmo quando dói — é uma das suas maiores belezas.”
+</p>
   <footer>
-    <p>© 2025 - Criado por Mim</p>
+    <p>© 2025 - Criado por Mim. Todos os direitos reservados.</p>
   </footer>
-
 </body>
 </html>
+
+
