--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
     </div>
     <h3 style="color: var(--primary-color); margin-bottom: 15px;"></h3>
     <ul>
-      <li><a href="file:///C:/Users/ordep/OneDrive/Área%20de%20Trabalho/Nova%20pasta/compras.html">📄 Produtos</a></li>
+      <li><a href="https://ordep111.github.io/loja/">📄 Produtos</a></li>
       <li><a href="#">📚 Outros eBooks</a></li>
       <li><a href="https://wa.me/message/25HR4RHXONVOP1">💬 Contato</a></li>
       <li><a href="https://www.linkedin.com/in/pedro-henrique-185802338/">📰 Linkedin</a></li>
