--- a/index.html
+++ b/index.html
@@ -253,10 +253,13 @@
           <label for="telefone">Seu telefone:</label><br>
           <input type="tel" id="telefone" name="telefone" pattern="[0-9]{10,11}" required placeholder="Somente números" style="width: 100%; padding: 8px; margin-top: 5px; margin-bottom: 15px; border-radius: 6px; border: 1px solid #ccc;"><br>
           <button type="submit" style="background-color: var(--primary-color); color: white; padding: 10px 20px; border: none; border-radius: 6px; cursor: pointer; font-size: 1rem;">
-            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScKgjIWSXdopBltcjpHzAtoMV0QaEfQBBZIC6IyE-O6_R2GqA/viewform?embedded=true"
-  width="100%" height="600" frameborder="0" marginheight="0" marginwidth="0" style="border-radius: 12px;">
-  Carregando…
-</iframe>
+            <div style="margin-top: 20px; border-radius: 12px; overflow: hidden; box-shadow: 0 4px 8px var(--shadow);">
+  <iframe 
+    src="https://docs.google.com/forms/d/e/1FAIpQLScKgjIWSXdopBltcjpHzAtoMV0QaEfQBBZIC6IyE-O6_R2GqA/viewform?embedded=true" 
+    width="100%" height="700" frameborder="0" marginheight="0" marginwidth="0">
+    Carregando…
+  </iframe>
+</div>
             📥 Adquira já
           </button>
         </form>
