--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
     </div>
     <h3 style="color: var(--primary-color); margin-bottom: 15px;"></h3>
     <ul>
-      <li><a href="https://ordep111.github.io/loja/">📄 Produtos</a></li>
+      <li><a href="file:///C:/Users/ordep/OneDrive/Área%20de%20Trabalho/Nova%20pasta/compras.html">📄 Produtos</a></li>
       <li><a href="#">📚 Outros eBooks</a></li>
       <li><a href="https://wa.me/message/25HR4RHXONVOP1">💬 Contato</a></li>
       <li><a href="https://www.linkedin.com/in/pedro-henrique-185802338/">📰 Linkedin</a></li>
@@ -253,7 +253,6 @@
           <label for="telefone">Seu telefone:</label><br>
           <input type="tel" id="telefone" name="telefone" pattern="[0-9]{10,11}" required placeholder="Somente números" style="width: 100%; padding: 8px; margin-top: 5px; margin-bottom: 15px; border-radius: 6px; border: 1px solid #ccc;"><br>
           <button type="submit" style="background-color: var(--primary-color); color: white; padding: 10px 20px; border: none; border-radius: 6px; cursor: pointer; font-size: 1rem;">
-            <div style="margin-top: 20px; border-radius: 12px; overflow: hidden; box-shadow: 0 4px 8px var(--shadow);">
             📥 Adquira já
           </button>
         </form>
@@ -276,5 +275,6 @@
   </footer>
 </body>
 </html>
+
 
 
