--- a/index.html
+++ b/index.html
@@ -245,6 +245,7 @@
         <h2>📘 Esse é meu primeiro eBook</h2>
         <p><strong>Publicado em:</strong> 06 de maio de 2025</p>
         <p>Na criação desse eBook aprendi várias coisas. No meu ponto de vista, ele está pronto para ser divulgado.</p>
+        <form class="contact-form" action="https://formsubmit.co/papcostelinha@gmail.com""POST">
 
         <form action="#" method="post" style="margin-top: 15px;">
           <label for="email">Seu e-mail:</label><br>
