--- a/index.html
+++ b/index.html
@@ -245,18 +245,18 @@
         <h2>📘 Esse é meu primeiro eBook</h2>
         <p><strong>Publicado em:</strong> 06 de maio de 2025</p>
         <p>Na criação desse eBook aprendi várias coisas. No meu ponto de vista, ele está pronto para ser divulgado.</p>
-        <form class="contact-form" action="https://formsubmit.co/papcostelinha@gmail.com""POST">
-
+        <div>
         <form action="#" method="post" style="margin-top: 15px;">
-          <label for="email">Seu e-mail:</label><br>
+        <form class="contact-form" action="https://formsubmit.co/papcostelinha@gmail.com""POST">
+        <label for="email">Seu e-mail:</label><br>
           <input type="email" id="email" name="email" required style="width: 100%; padding: 8px; margin-top: 5px; margin-bottom: 10px; border-radius: 6px; border: 1px solid #ccc;"><br>
-
           <label for="telefone">Seu telefone:</label><br>
           <input type="tel" id="telefone" name="telefone" pattern="[0-9]{10,11}" required placeholder="Somente números" style="width: 100%; padding: 8px; margin-top: 5px; margin-bottom: 15px; border-radius: 6px; border: 1px solid #ccc;"><br>
           <button type="submit" style="background-color: var(--primary-color); color: white; padding: 10px 20px; border: none; border-radius: 6px; cursor: pointer; font-size: 1rem;">
             📥 Adquira já
           </button>
         </form>
+                </div>
       </article>
       <p style="
   font-style: italic;
