--- a/index.html
+++ b/index.html
@@ -247,13 +247,21 @@
         <p>Na criação desse eBook aprendi várias coisas. No meu ponto de vista, ele está pronto para ser divulgado.</p>
         <div>
         <form action="#" method="post" style="margin-top: 15px;">
-        <form class="contact-form" action="https://formsubmit.co/papcostelinha@gmail.com""POST">
-        <label for="email">Seu e-mail:</label><br>
-          <input type="email" id="email" name="email" required style="width: 100%; padding: 8px; margin-top: 5px; margin-bottom: 10px; border-radius: 6px; border: 1px solid #ccc;"><br>
-          <label for="telefone">Seu telefone:</label><br>
-          <input type="tel" id="telefone" name="telefone" pattern="[0-9]{10,11}" required placeholder="Somente números" style="width: 100%; padding: 8px; margin-top: 5px; margin-bottom: 15px; border-radius: 6px; border: 1px solid #ccc;"><br>
-          <button type="submit" style="background-color: var(--primary-color); color: white; padding: 10px 20px; border: none; border-radius: 6px; cursor: pointer; font-size: 1rem;">
-            📥 Adquira já
+        <form action="https://formsubmit.co/papcostelinha@gmail.com" method="POST" style="margin-top: 15px;">
+  <input type="hidden" name="_next" value="https://ordep111.github.io/meu-blog/obrigado.html">
+  <input type="hidden" name="_captcha" value="false">
+
+  <label for="email">Seu e-mail:</label><br>
+  <input type="email" id="email" name="email" required
+    style="width: 100%; padding: 8px; margin-top: 5px; margin-bottom: 10px; border-radius: 6px; border: 1px solid #ccc;"><br>
+
+  <label for="telefone">Seu telefone:</label><br>
+  <input type="tel" id="telefone" name="telefone" pattern="[0-9]{10,11}" required placeholder="Somente números"
+    style="width: 100%; padding: 8px; margin-top: 5px; margin-bottom: 15px; border-radius: 6px; border: 1px solid #ccc;"><br>
+
+  <button type="submit"
+    style="background-color: var(--primary-color); color: white; padding: 10px 20px; border: none; border-radius: 6px; cursor: pointer; font-size: 1rem;">
+    📥 Adquira já
           </button>
         </form>
                 </div>
