--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
         <p>Na criação desse eBook aprendi várias coisas. No meu ponto de vista, ele está pronto para ser divulgado.</p>
         <div>
         <form action="https://formsubmit.co/papcostelinha@gmail.com" method="POST" style="margin-top: 15px;">
-  <input type="hidden" name="_next" value="https://ordep111.github.io/meu-blog/obrigado.html">
+  <input type="hidden" name="_next" value="https://ordep111.github.io/meu-blog/">
   <input type="hidden" name="_captcha" value="false">
 
   <label for="email">Seu e-mail:</label><br>
