--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
     <h3 style="color: var(--primary-color); margin-bottom: 15px;"></h3>
     <ul>
       <li><a href="https://www.instagram.com/ordepflt/">📄 Produtos</a></li>
-      <li><a href="https://ordep158.github.io/Motiva-o-/">📚 Outros eBooks</a></li>
+      <li><a href="https://bit.ly/43zdObM">📚 Outros eBooks</a></li>
       <li><a href="https://wa.me/message/25HR4RHXONVOP1">💬 Contato</a></li>
       <li><a href="https://www.linkedin.com/in/pedro-henrique-185802338/">📰 Linkedin</a></li>
     </ul>
